<resources>
    <string name="app_name">MessageMe</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="login">Login</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="account_information">Account Information</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="all_fields_are_mandatory">All fields are mandatory!</string>
    <string name="activity_returned_with_result">Activity returned with result</string>
    <string name="passwords_do_not_match">Passwords do not match!</string>
    <string name="thank_you_for_registering">Thank you for registering!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="login_failed">Login failed!</string>
    <string name="an_error_has_occurred">An error has occurred!</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="you_have_been_authenticated_as">You have been authenticated as</string>
    <string name="write_message">Write Message</string>
    <string name="read_message">Read Message</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="send">Send</string>
    <string name="date_and_time">Date &amp; Time</string>
    <string name="back">Back</string>
    <string name="user_id">User Id</string>
    <string name="update">Update</string>
    <string name="update_was_successful">Update was successful!</string>
    <string name="update_has_failed">Update has failed!</string>
    <string name="communicate">Communicate</string>
    <string name="server">Server</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="bind">Bind</string>
    <string name="unbind">Unbind</string>
    <string name="client">Client</string>
    <string name="query">Query</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register Activity</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="title_activity_write_message">Write Message</string>
    <string name="title_activity_read_message">Read Message</string>
    <string name="title_activity_communicate">CommunicateActivity</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
</resources>
