<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.rosedu.dandroid.messageme.views.ProfileFragment">

    <TextView
        android:id="@+id/profile_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <Space
        android:layout_width="@dimen/spacer_horizontal"
        android:layout_height="@dimen/spacer_vertical" />

    <Button
        android:id="@+id/communicate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/communicate"/>

    <Space
        android:layout_width="@dimen/spacer_horizontal"
        android:layout_height="@dimen/spacer_vertical" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:layout_row="0"
            android:layout_column="0"/>
        <EditText
            android:id="@+id/user_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled="false"
            android:layout_row="0"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_row="1"
            android:layout_column="0"/>
        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:enabled="false"
            android:layout_row="1"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_row="2"
            android:layout_column="0"/>
        <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_row="2"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_row="3"
            android:layout_column="0"/>
        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_row="3"
            android:layout_column="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_again"
            android:layout_row="4"
            android:layout_column="0"/>
        <EditText
            android:id="@+id/password_again_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_row="4"
            android:layout_column="1"/>
    </GridLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacer_vertical" />
    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_gravity="center"/>

</LinearLayout>
