<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.onlineexperts.nofeedates.views.WriteMessageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <TextView
            android:text="@string/write_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_gravity="center"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacer_vertical" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:layout_row="0"
                android:layout_column="0"/>
            <EditText
                android:id="@+id/from_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:layout_row="0"
                android:layout_column="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:layout_row="1"
                android:layout_column="0"/>
            <EditText
                android:id="@+id/to_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:layout_row="1"
                android:layout_column="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject"
                android:layout_row="2"
                android:layout_column="0"/>
            <EditText
                android:id="@+id/subject_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_row="2"
                android:layout_column="1"/>
        </GridLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/content" />
        <EditText
            android:id="@+id/content_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:maxLines="6"
            android:inputType="textMultiLine" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spacer_vertical" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_gravity="center"/>
            <Space
                android:layout_width="@dimen/spacer_horizontal"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
